...
    <string name="permission_information_message">To utilize the application properly, access to the microphone is
        necessary. If you have any doubts, check the privacy policy for this application.
    </string>
    <string name="permission_information_title">Information</string>
    <string name="permission_information_button_label">Proceed anyway</string>
    <string name="settings_algo_label">Algorithm</string>
    <string name="action_training">Training</string>
    <string name="training_start_button">Start</string>
    <string name="training_stop_button">Stop</string>
    <string name="training_trainings_label">Scale</string>
    <string name="training_precision_label">Precision</string>
    <string name="training_progress_label">Progress</string>
    <string name="settings_conf_label">Confidence</string>
    <string name="settings_chord_conf_label">Chord Confidence</string>

...
