...
-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="de.schliweb.bluesharpbendingapp.app.MainActivity">
    <item
            android:id="@+id/action_harp"
            android:orderInCategory="100"
            android:title="@string/app_name"
            app:showAsAction="never"/>
    <item
            android:id="@+id/action_training"
            android:orderInCategory="100"
            android:title="@string/action_training"
            app:showAsAction="never"/>
    <!--<item
            android:id="@+id/action_tuner"
            android:orderInCategory="100"
...
