...
    <com.google.android.material.appbar.AppBarLayout
            style="@style/ModernAppBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.Material3.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

...
